Closed Bug 697753 Opened 14 years ago Closed 14 years ago

WebGL Conformance fails on 'framebuffer-object-attachment'

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla10

People

(Reporter: jgilbert, Assigned: jgilbert)

References

Details

Attachments

(1 file, 1 obsolete file)

We currently fail a number of times in the 'framebuffer-object-attachment' test. These fails appear to be caused by readPixels not properly generating an INVALID_FRAMEBUFFER_OPERATION when needed. It looks like this is because the optimization to skip reading when the width or height is 0 kicks in before we test for all error conditions.
Depends on: 697168
Test should now pass cleanly on all platforms.
Attachment #570022 - Flags: review?(bjacob)
Unbitrot.
Attachment #570022 - Attachment is obsolete: true
Attachment #570022 - Flags: review?(bjacob)
Attachment #570032 - Flags: review?(bjacob)
Attachment #570032 - Flags: review?(bjacob) → review+
Whiteboard: [inbound]
Target Milestone: --- → mozilla10
Removed [inbound] from whiteboard as per https://wiki.mozilla.org/Tree_Rules/Inbound
Whiteboard: [inbound]
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: