Bug 697753 - Fix WebGL conf. errors in framebuffer-object-attachment - r=bjacob